@@ -1,6 +1,12 @@
 NEXT (2.6)
 -----------------------------------
 
+- fix issue364: shorten and enhance tracebacks representation by default.  
+  The new "--tb=auto" option (default) will only display long tracebacks
+  for the first and last entry.  You can get the old behaviour of printing
+  all entries as long entries with "--tb=long".  Also short entries by
+  default are now printed very similarly to "--tb=native" ones.
+
 - fix issue514: teach assertion reinterpretation about private class attributes
 
 - change -v output to include full node IDs of tests.  Users can copy
